<resources>
    <string name="app_name">Challenge4</string>
    <string name="hai_binarian">Hai Binarian</string>
    <string name="mau_makan_apa_nich">Mau Makan apa nich?</string>
    <string name="diskon_30">Diskon 30%</string>
    <string name="pesan_makanan_dengan_aplikasi_dan_dapatkan_diskonmu">Pesan makanan dengan aplikasi dan dapatkan diskonmu</string>
    <string name="burger">Burger</string>
    <string name="mie">Mie</string>
    <string name="snack">Snack</string>
    <string name="minuman">Minuman</string>
    <string name="list_menu_makanan">List Menu Makanan</string>
    <string name="nama_makanan">Nama Makanan</string>
    <string name="harga_makanan">Harga Makanan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_keranjang">Keranjang</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="detail_makanan">Detail Makanan</string>
    <string name="lokasi">Lokasi</string>
    <string name="detail_lokasi">detail_lokasi</string>
    <string name="tambah_ke_keranjang_rp_18_000">Tambah Ke Keranjang - Rp 18.000</string>
    <string name="tambah">+</string>
    <string name="kurang">-</string>
    <string name="jumlah_pesanan">1</string>
    <string name="sate_ayam">Sate Ayam</string>
    <string name="rp_19_000">Rp 19,000</string>
    <string name="keranjang">Keranjang</string>
    <string name="login">Login</string>
    <string name="don_t_have_any_account_register">Don\'t have any account? Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="no_telepon">No.Telepon</string>
    <string name="registrasi">Registrasi</string>
    <string name="judul_makanan">Judul Makanan</string>
</resources>