<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="androidx.navigation.fragment.NavHostFragment"
    android:id="@+id/nav_host_fragment_activity_keranjang2"
    app:defaultNavHost="true"
    tools:context=".ui.home.HomeFragment">>


    <TextView
        android:id="@+id/salamAwal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hai_binarian"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="340dp"
        android:layout_marginBottom="668dp"
        android:text="@string/mau_makan_apa_nich"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salamAwal"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/bg_disc"
        android:layout_width="373dp"
        android:layout_height="138dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171"
        tools:srcCompat="@color/bg_background" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="87dp"
        android:layout_height="87dp"
        app:layout_constraintBottom_toBottomOf="@+id/bg_disc"
        app:layout_constraintEnd_toEndOf="@+id/bg_disc"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="@+id/bg_disc"
        app:layout_constraintTop_toTopOf="@+id/bg_disc"
        app:layout_constraintVertical_bias="0.529"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/discount"
        android:layout_width="147dp"
        android:layout_height="31dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/diskon_30"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/bg_disc"
        app:layout_constraintEnd_toEndOf="@+id/bg_disc"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="@+id/bg_disc"
        app:layout_constraintTop_toTopOf="@+id/bg_disc"
        app:layout_constraintVertical_bias="0.252" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="223dp"
        android:layout_height="49dp"
        android:text="@string/pesan_makanan_dengan_aplikasi_dan_dapatkan_diskonmu"
        app:layout_constraintBottom_toBottomOf="@+id/bg_disc"
        app:layout_constraintEnd_toEndOf="@+id/bg_disc"
        app:layout_constraintHorizontal_bias="0.853"
        app:layout_constraintStart_toStartOf="@+id/bg_disc"
        app:layout_constraintTop_toTopOf="@+id/bg_disc"
        app:layout_constraintVertical_bias="0.865" />

    <ImageView
        android:id="@+id/makanan1"
        android:layout_width="63dp"
        android:layout_height="63dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.399"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/makanan2"
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_marginStart="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toEndOf="@+id/makanan1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.399"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/makanan3"
        android:layout_width="63dp"
        android:layout_height="63dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toEndOf="@+id/makanan2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.399"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/makanan4"
        android:layout_width="63dp"
        android:layout_height="63dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.672"
        app:layout_constraintStart_toEndOf="@+id/makanan3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.399"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/nama_makanan1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/burger"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.084"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/makanan1"
        app:layout_constraintVertical_bias="0.02" />

    <TextView
        android:id="@+id/nama_makanan2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/mie"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/makanan2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/nama_makanan3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.643"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/makanan3"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/nama_makanan4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minuman"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/makanan4"
        app:layout_constraintVertical_bias="0.023" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="411dp"
        android:layout_height="361dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/judulMenuMakanan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_menu_makanan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.062"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.046" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewMenuKeranjang"
            android:layout_width="376dp"
            android:layout_height="248dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/gridChanger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.953"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.018"
            app:srcCompat="@drawable/tombol_list" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>